fix(editor): overflow in html presets

--- a/packages/better-write-plugin-theme/css/preset.css
+++ b/packages/better-write-plugin-theme/css/preset.css
@@ -7,6 +7,10 @@
   -webkit-font-smoothing: antialiased;
 }
 
+html {
+  overflow: hidden;
+}
+
 #app {
   min-height: 100vh;
   width: 100%;
